--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
       schema-locations: classpath:schema.sql
       continue-on-error: true
 
+  redis:
+    host: localhost
+    port: 6379
+
 
 aws:
   cognito:
@@ -27,6 +31,7 @@ aws:
     clientId: ${AWS_COGNITO_CLIENT_ID}
     clientSecret: ${AWS_COGNITO_SECRET}
     domain: ${AWS_COGNITO_DOMAIN}
+
 
 logging:
   level:
