--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,16 +6,14 @@ spring:
       connection-timeout: 30000
       maximum-pool-size: 10
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath:schema.sql
-      continue-on-error: true
+      ddl-auto: none
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}?user=${DB_USERNAME}&password=${DB_PASSWORD}&sslmode=require&connectTimeout=30
+
   data:
     redis:
       port: 6379
