--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  config:
+    activate:
+      on-profile: prod
   datasource:
     url: jdbc:postgresql://${DB_HOST}/${DB_NAME}?user=${DB_USERNAME}&password=${DB_PASSWORD}&sslmode=require&connectTimeout=30
     driver-class-name: org.postgresql.Driver
@@ -16,14 +19,17 @@ spring:
 
   data:
     redis:
-      port: 6379
-      host: localhost
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: https://cognito-idp.eu-central-1.amazonaws.com/${AWS_COGNITO_USER_POOL}
           jwk-set-uri: https://cognito-idp.eu-central-1.amazonaws.com/${AWS_COGNITO_USER_POOL}/.well-known/jwks.json
+
+---
 
 aws:
   region: eu-central-1
@@ -34,7 +40,6 @@ aws:
   cognitoSecret: ${AWS_COGNITO_SECRET}
   cognitoDomain: ${AWS_COGNITO_DOMAIN}
   s3BucketName: ${AWS_S3_BUCKET}
-
 
 server:
   port: 8080
