--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Backend Deployment
 on:
   push:
-    branches: [main]
+    branches: [dev]
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
