--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,8 +55,9 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
   security:
     oauth2:
       resourceserver:
