--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}?user=${DB_USERNAME}&password=${DB_PASSWORD}&sslmode=require&connectTimeout=30
+    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}?user=${DB_USERNAME}&password=${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       connection-timeout: 30000
@@ -22,7 +22,7 @@ spring:
     locations: classpath:db/migration
     baseline-on-migrate: true
     out-of-order: false
-    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}?user=${DB_USERNAME}&password=${DB_PASSWORD}&sslmode=require&connectTimeout=30
+    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}?user=${DB_USERNAME}&password=${DB_PASSWORD}
 
 
   data:
